# trading-history-service

./: .env  .gitignore  README.md  pyproject.toml
examples/: example1_history_query.py  example2_feed.py  example3_scan_and_screen.py  example4_daily_last_6m.py
src/scanner/: REDME.md  __init__.py  indicators.py  metrics.py  screener.py  universe.py  visualize.py
src/yf_history/: __init__.py  _index_ops.py  feed.py  reliable_cache.py
