[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yf-history"
version = "0.1.0"
description = "Lightweight yfinance-based history service with a local Parquet cache"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
  { name = "Local Project" }
]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "yfinance>=0.2.36",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://example.local/yf-history"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yf_history*"]
exclude = []

